--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Sam I need a Beer</title>
+  <title>Someone get me a beer</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
@@ -14,7 +14,7 @@
   <form id="getmebeer">
     <input name="name" id="name" placeholder="Friends Name" /><br />
     <input name="number" id="number" placeholder="Friends Number" /><br />
-    <textarea name="message" id="message" placeholder="Message"></textarea><br />
+    <textarea name="message" id="message" placeholder="Name or Message"></textarea><br />
     <button type="submit">Dude get me a beer</button>
   </form>
 </template>
