--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,12 +1,17 @@
 <head>
   <title>Someone get me a beer</title>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <div class="vertical-align">
-    <h1>You could probably use a beer, but fuck doing that yourself.</h1>
-    {{> beer}}
+    <div class="beer">
+      <h1>You could probably use a beer, but fuck doing that yourself.</h1>
+      {{> beer}}
+    </div>
   </div>
 </body>
 
